--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header class="header" id="home">
     <nav class="navbar container">
-      <a href="./index.html" class="logo">POOJA BHARATHI</a>
+      <a href="./index.html" class="logo">Pooja Bharathi.</a>
       <div class="navbar-buttons">
         <button type="button" class="button icon-button menu-toggle-button">
           <i class="bx bx-menu open-icon"></i>
@@ -69,7 +69,7 @@
           </div>
           <div class="scroll-reveal-right">
             <div class="description-image has-sparkles">
-              <img src="./images/poojapic.jpeg" alt="">
+              <img src="./images/poojapic2.jpeg" alt="">
             </div>
           </div>
         </div>
@@ -188,17 +188,17 @@
       <div class="social-media">
         <ul class="list">
           <li class="list-item">
-            <a href="#" class="list-link">
+            <a href="https://twitter.com/Poojabharathi_p" class="list-link">
               <i class="bx bxl-twitter"></i>
             </a>
           </li>
           <li class="list-item">
-            <a href="#" class="list-link">
+            <a href="https://www.linkedin.com/in/pooja-bharathi-p-82095222a" class="list-link">
               <i class="bx bxl-linkedin"></i>
             </a>
           </li>
           <li class="list-item">
-            <a href="#" class="list-link">
+            <a href="https://github.com/Poojabharathi17" class="list-link">
               <i class="bx bxl-github"></i>
             </a>
           </li>
