--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-  <link rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
- 
+ <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
-<body>
+<body >
   <header class="header" id="home">
     <nav class="navbar container">
       <a href="./index.html" class="logo">Pooja Bharathi.</a>
