--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
    
-    <div class='spinner-wrapper'>
+    <!--<div class='spinner-wrapper'>
         <div class="spinner"></div>
-    </div>
+    </div>-->
     
     <header class="l-header">
         <nav class="nav bd-grid">
@@ -110,7 +110,7 @@
             <h2 class="section-title">My Works</h2>
             <div class="works_container bd-grid">
                 <div class="works_img">
-                        <a href="https://archanagandhi.netlify.app/" class="works_link-name"><img src="images/project1.jpeg"></a>
+                        <a href="https://starbuckslandingpage1.netlify.app/" target="_blank" class="works_link-name"><img src="images/project1.jpeg" width="650" height="400"></a>
                     <div class="works_details">
                         <h2 class="work_heading">Starbucks landing page</h2>
                         <p class="work_para">I used HTML, CSS and javascript to built this landing page.</p>
