--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </head>
 <body>
    
-    <!--<div class='spinner-wrapper'>
+    <div class='spinner-wrapper'>
         <div class="spinner"></div>
-    </div>-->
+    </div>
     
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
-                <a href="https://archanagandhi.netlify.app/" class="nav_logo">Pooja</a>
+                <a href="#" class="nav_logo">Pooja</a>
             </div>
 
             <div class="nav_menu" id="nav-menu">
@@ -45,7 +45,7 @@
                 <h1 class="home_title">Pooja<br><span>Bharathi</span></h1>
                 <p class="title_para">Emerging <span>Front End Developer</span>.</p>
                 <div class="email_home">
-                <a href="mailto:poojabharathi178@gmail.com" class="email-home">Download cv</a>
+                <a href="pooja bharathi.pdf" class="email-home">Download cv</a>
             </div>
                 <img src="images/2-removebg.png" class="home_img" width="100">
         </section>
@@ -83,22 +83,10 @@
                     <span class="skills_name"><img src="images/html5.png" alt=""><br>HTML</span>
                     <span class="skills_name"><img src="images/css-3.png" alt=""><br> CSS</span>
                     <span class="skills_name"><img src="images/javascript.png" alt=""><br>JavaScript</span>
-                   <!-- <span class="skills_name"><img src="img/react.png" alt=""><br> React</span>
-                    <span class="skills_name"><img src="img/bootstrap.png" alt=""><br> Bootstrap</span>
-
-                    <h3 class="skills_subtitle">Back-End</h3>
-                    <span class="skills_name"><img src="img/python.png" alt=""><br> Python/Django</span>
-                    <span class="skills_name"><img src="img/mysql.png" alt=""><br> MySQL</span>
-                    <span class="skills_name"><img src="img/mongodb.png" alt=""><br> MongoDB</span>-->
 
                     <h3 class="skills_subtitle">Others</h3>
                     <span class="skills_name"><img src="images/c lang.png" alt=""><br> C Language</span>
-                    <!--<span class="skills_name"><img src="img/illustrator.png" alt=""><br>Illustrator</span>
-                    <span class="skills_name"><img src="img/experience.png" alt=""><br> Adobe XD</span>-->
-
-                    <!--<h3 class="skills_subtitle">Interest</h3>
-                    <span class="skills_name">Machine Learning</span>
-                    <span class="skills_name">Data Science</span>-->
+                   
                 </div>
                 <div>
                     <img src="images/3.png" class="skill_img">
