--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p class="title_para">Emerging <span>Front End Developer</span>.</p>
                 <div class="email_home">
                 <a href="Pooja Bharathi P - Front End Developer.pdf" class="email-home">Download cv</a>
-                <a href="audio/index.html" class="email-home">Hear Out!</a>
+                <a href="intro/index.html" class="email-home">Hear Out!</a>
             </div>
                 <img src="images/2-removebg.png" class="home_img" width="100">
         </section>
